--- a/serverless.yml
+++ b/serverless.yml
@@ -3,7 +3,10 @@
 service: api-rest-productos
 
 custom:
-  tableName: 'api-rest-productos-${self:provider.stage}'
+  tableName: 'api-productos-${self:provider.stage}'
+  dynamodb:
+    start:
+      migrate: true
 
 provider:
   name: aws
@@ -20,9 +23,9 @@ provider:
         - dynamodb:UpdateItem
         - dynamodb:DeleteItem
       Resource:
-        - { "Fn::GetAtt": ["UsersDynamoDBTable", "Arn" ] }
+        - { "Fn::GetAtt": ["ProductsDynamoDBTable", "Arn" ] }
   environment:
-    USERS_TABLE: ${self:custom.tableName}
+    PRODUCTS_TABLE: ${self:custom.tableName}
     
 functions:
   app:
@@ -33,18 +36,23 @@ functions:
 
 resources:
   Resources:
-    UsersDynamoDBTable:
+    ProductsDynamoDBTable:
       Type: 'AWS::DynamoDB::Table'
       Properties:
         AttributeDefinitions:
           -
-            AttributeName: userId
+            AttributeName: productId
             AttributeType: S
         KeySchema:
           -
-            AttributeName: userId
+            AttributeName: productId
             KeyType: HASH
         ProvisionedThroughput:
           ReadCapacityUnits: 1
           WriteCapacityUnits: 1
         TableName: ${self:custom.tableName}
+
+plugins:
+  - serverless-dynamodb-local
+  - serverless-offline
+  
